force-app/main/default/objects/Contact/fields/Amount_Great__c.field-meta.xml
<CustomField>
    <fullName>Amount_Great__c</fullName>
    <label>Amount Great</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>