force-app/main/default/objects/Contact/fields/isBirthday__c.field-meta.xml
<CustomField>
    <fullName>isBirthday__c</fullName>
    <formula>IF(
                        AND( DAY( TODAY() ) = DAY( Birthdate  ),
                                   MONTH(TODAY() ) = MONTH( Birthdate )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isBirthday</label>
    <type>Checkbox</type>
</CustomField>