force-app/main/default/objects/Contact/validationRules/ValidationPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationPhone</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    LEN( AssistantPhone ) &lt;&gt; 10,
    LEN( HomePhone ) &lt;&gt; 10,
    LEN( MobilePhone ) &lt;&gt; 10,
    LEN(  OtherPhone ) &lt;&gt; 10,
    LEN( Phone ) &lt;&gt; 10

)</errorConditionFormula>
    <errorMessage>Phone numbers should be of length 10</errorMessage>
</ValidationRule>